# cpp-conflux-sdk

./: .gitignore  CMakeLists.txt  README.md
cmake/Hunter/: config.cmake
docs/: README.md  _coverpage.md  _sidebar.md  abi.md  account.md  address.md  currency.md  index.html  index.md  rpc.md  transaction.md
examples/: CMakeLists.txt  abi.cpp  account.cpp  address.cpp  bloom_filter.cpp  currency.cpp  deploy_contract.cpp  log_filter.cpp  receipt.json  rpc.cpp  send_transaction.cpp  transaction_receipt.cpp
examples/qt/: AsyncQueryAccountThread.cpp  AsyncQueryAccountThread.h  CMakeLists.txt  DeployContractThread.cpp  DeployContractThread.h  TransferThread.cpp  TransferThread.h  widget.cpp  widget.h  widget.ui
libcfxcore/: CMakeLists.txt  TransactionBase.cpp  TransactionBase.h  abi.h  account.cpp  account.h  bloom_filter.cpp  bloom_filter.h  conflux.cpp  conflux.h  contract.cpp  contract.h  currency.cpp  currency.h
libcfxcore/abi/: Array.cpp  Array.h  Bytes.cpp  Bytes.h  Data.cpp  Data.h  Function.cpp  Function.h  Hash.cpp  Hash.h  ParamAddress.h  ParamBase.h  ParamFactory.cpp  ParamFactory.h  ParamNumber.cpp  ParamNumber.h  Parameters.cpp  Parameters.h  ValueDecoder.cpp  ValueDecoder.h  ValueEncoder.cpp  ValueEncoder.h
libcfxcore/common/encoding/: hex.cpp  hex.h
libcfxcore/common/util/: json_convert.h  string_util.cpp  string_util.h
libcfxcore/rpc/: client.cpp  client.h  gen_client_cpp.sh  httpclient.cpp  httpclient.h  https_rpc_client.cpp  https_rpc_client.h  rpc_parameters.cpp  rpc_parameters.h  spec.json  stubclient.h
libcfxcore/types/: epoch_number.cpp  epoch_number.h  log_enrty.cpp  log_enrty.h  log_filter.cpp  log_filter.h  transaction_receipt.cpp  transaction_receipt.h
libcfxcore/types/cfxaddress/: address.cpp  address.h  address_type.cpp  address_type.h  body.cpp  body.h  checksum.cpp  checksum.h  lib.cpp  lib.h  network_type.cpp  network_type.h  version_byte.cpp  version_byte.h
libdevcore/: CMakeLists.txt  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonJS.cpp  CommonJS.h  FixedHash.h  Guards.h  RLP.cpp  RLP.h
libdevcrypto/: Common.cpp  Common.h  SecretStore.cpp
tests/: CMakeLists.txt  test_main.cpp
tools/: turn_off_proxy.bat  turn_on_proxy.bat
